--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+333<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -44,9 +44,8 @@
 
     <br><br>
         <h1 class="cheddar" style="color: blue;" >
-        yeoooo, this is Changoos and welcome to my WEBSITE!!!!! 😁
-        </h1>
-
+        YEOOOOOOOOOOOOOOOOOOO, this is Changoos and welcome to my WEBSITE!!!!! 😁
+        </h1><br>
 
         <div class="lightning">
             <img src="imgs/rightlight.gif" alt="bijli">
@@ -63,8 +62,10 @@
             </div>
 
             <div class="heading-1">
-                <h2>I be making music</h23> 
-                    <img class="point-right" src="imgs/arrow_blue_right.gif" alt="point-right">
+                <h2>I make &nbsp; &nbsp; music</h23> 
+
+                    <img class="point-right" src="imgs/arrow_blue_right.gif" alt="point-right">                   
+                     <img class="fire" src="imgs/W-firem.gif" alt="fire">
             </div>
 
             <div class="handfulla">
@@ -81,7 +82,7 @@
             </div>
 
             <div class="earth">
-                <img src="imgs/rotating_earth2.gif" alt="">
+                <img src="imgs/rotating_earth2.gif" alt="earth">
             </div>
 
             <div class="neptune">
@@ -90,6 +91,11 @@
 
             <div class="jupiter">
                 <img src="imgs/planet5.gif" alt="jupiter">
+            </div>
+
+            <div class="welcome">
+                <a href="https://changoos.bio.link/"><img src="imgs/click_to_listen.gif" alt=""></a>
+                
             </div>
 
             <div class="buymusic">
@@ -128,6 +134,27 @@
        -->  
 
 
+       <div class="container-2">
+        <div class="second" id="emote1"> <img src="imgs/coolasf.png" alt=""></div>
+        <div class="second" id="boutme"> <h1 style="color:goldenrod;"> Im a 17 year old artist, producer and songwriter from Mumbai, India</h1></div>
+        <div class="second" id="flag"> <img src="imgs/inflaggg.gif" alt="india flag"></div>
+       </div>
+
+            <br><br>
+
+       <div class="container-3">
+        <div class="prod" id="firstbeat"> <h1 style="color:gainsboro;"> what i be on when ian got <br>shit to do </h1></div>
+        <div class="prod" id="yo"><img src="imgs/yo.png" alt=""></div>
+        <div class="prod" id="arrow"> <img src="imgs/Arrow.gif" alt=""></div>
+        <div class="prod" id="13days"> <iframe width="560" height="315" src="https://www.youtube.com/embed/iEFv8TsFToA?si=bI24nQdAgsrigE8t" 
+            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
+            picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> </div>
+            
+
+        <div class="prod" id="japanese"> <a href="https://i.pinimg.com/736x/c9/e5/13/c9e51305971ff75b3d7878aa23e36758.jpg"><img src="imgs/sadoslave1.gif" alt=""></a>
+        </div>
+        <div class="prod" id="dayn"><img src="imgs/dayn.png" alt=""></div>
+       </div>
 
 
 
@@ -135,7 +162,8 @@
 
 
 
-            <br>
+
+
         <!--UNDERCONSTRUCTION-->
     <div style="text-align: center;">
         <img src="https://localghost.dev/img/geocities/consbar.gif"  alt="UNDER CONSTRUCTION" align="center" >
