--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> </div>
             
 
-        <div class="prod" id="japanese"> <a href="https://i.pinimg.com/736x/c9/e5/13/c9e51305971ff75b3d7878aa23e36758.jpg"><img src="imgs/sadoslave1.gif" alt=""></a>
+        <div class="prod" id="japanese"> <a href="https://i.pinimg.com/736x/c9/e5/13/c9e51305971ff75b3d7878aa23e36758.jpg" target="blank"><img src="imgs/sadoslave1.gif" alt=""></a>
         </div>
         <div class="prod" id="dayn"><img src="imgs/dayn.png" alt=""></div>
        </div>
